--- a/src/deployr-app/app/src/scss/app.scss
+++ b/src/deployr-app/app/src/scss/app.scss
@@ -1,12 +1,13 @@
 @import 'colours';
 @import '~bulma/sass/utilities/all';
 
-$body-size: 12px;
+$body-size: 14px;
 $input-border-color: rgba(0,0,0,.08);
 $body-background-color: $background;
 $radius-large: 4px;
 $radius: 2px;
 $box-shadow: 0 0 1px 0 rgba(10,10,10,.1), 0 1px 0 0 rgb(231, 236, 242);
+$link: $primary;
 
 html {
   min-height: calc(100vh - 3.5rem);
