--- a/src/deployr-app/app/src/scss/_transition.scss
+++ b/src/deployr-app/app/src/scss/_transition.scss
@@ -1,6 +1,10 @@
-.fade-enter-active, .fade-leave-active {
-  transition: opacity 0.5s;
+.slide-leave-active,
+.slide-enter-active {
+  transition: 1s;
 }
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-  opacity: 0;
+.slide-enter {
+  transform: translateX(100%);
+}
+.slide-leave-to {
+  transform: translateX(200%);
 }
