--- a/src/deployr-app/app/src/scss/_box.scss
+++ b/src/deployr-app/app/src/scss/_box.scss
@@ -1,5 +1,8 @@
+.box {
+  border-radius: 0px;
+}
+
 .box-list {
-  // 1.25rem;
   .list-item {
     background-color: $white;
     padding: 1.25rem;
