--- a/src/deployr-app/app/src/scss/_menu.scss
+++ b/src/deployr-app/app/src/scss/_menu.scss
@@ -1,25 +1,10 @@
-.menu {
-  .menu-item {
-    padding: 0.75rem 0.75rem 0.75rem 0; 
-    &.is-active,
-    &.router-link-active {
-      // background-color: $primary;
-      // background-color: $table-row-hover-background-color;
-      background-color: $white;
-      background-color: $white-bis;
-      background-color: $white-ter;
-      color: $primary;
-      //color: $body-color;
-      // box-shadow: $box-shadow;
-    }
+#menu {
+  justify-content: space-between;
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
 
-    &:hover {
-      color: $primary;
-    }
-    &:hover:not(.is-active) {
-      background-color: transparent;
-      color: $primary;
-    }
-    
+  &.is-fullheight {
+    min-height: 100vh;
   }
 }
