--- a/src/deployr-app/app/src/scss/_team-list.scss
+++ b/src/deployr-app/app/src/scss/_team-list.scss
@@ -1,15 +1,15 @@
 $start: 1;
 
 .team-list {
-  // 1.25rem;
   .list-item {
     background-color: $white;
-    //padding: 1.25rem;
     padding: 0;
 
     @while $start < 16 {
       &.has-depth-#{$start} {
-        margin-left: #{$start}rem;
+        .column:first-of-type {
+          margin-left: #{$start}rem;
+        }
       }
       $start: $start + 1;
     }
@@ -21,11 +21,13 @@ $start: 1;
 
   .nested-list {
     &.is-root {
-      margin-bottom: 1.5rem;
+      // margin-bottom: 1.5rem;
       box-shadow: $box-shadow;
 
-      .nested-list .list-item {
-        background-color: rgba(255, 255, 255, 0.4);
+      .nested-list {
+        .list-item {
+          background-color: #f9f9f9;
+        }
       }
     }
     
