--- a/src/deployr-app/app/src/scss/app.scss
+++ b/src/deployr-app/app/src/scss/app.scss
@@ -1,26 +1,35 @@
+// $family-sans-serif: 'Open Sans', -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
+
 @import 'colours';
 @import '~bulma/sass/utilities/all';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 
 $body-size: 14px;
 $input-border-color: rgba(0,0,0,.08);
 $body-background-color: $background;
+$body-background-color: rgba(238, 242, 245, 1);
 $radius-large: 4px;
 $radius: 2px;
 $box-shadow: 0 0 1px 0 rgba(10,10,10,.1), 0 1px 0 0 rgb(231, 236, 242);
 $link: $primary;
+$input-focus-border-color: $grey;
+$input-focus-box-shadow-color: rgba($grey-lighter, 0.25);
 
 html {
-  min-height: calc(100vh - 3.5rem);
+  min-height: calc(100vh);
+  overflow-y: auto;
 }
 
 #app {
-  padding-top: 3.5rem;
+  // padding-top: 3.5rem;
 }
 
 // Import these after variables
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
 @import 'navbar';
+@import 'breadcrumb';
+@import 'sidebar';
 @import 'input';
 @import 'svg';
 @import 'avatar';
